--- a/index.html
+++ b/index.html
@@ -91,15 +91,13 @@
                     <div class="work-description">
                         <div class="job">
                             <h4 class="job-title">製片助理</h4>
-                            <p>► Briefing meeting、現場拍攝支援</p>
-                            <p>► 申請公播權、購買線上影片、音效等素材</p>
-                            <p>► 場勘、場地租借、道具租借等</p>
+                            <p>► 購買線上影音素材、道具與場地租借</p>
+                            <p>► 現場拍攝支援、申請公播權、勘景</p>
                         </div>
                         <div class="skills">
                             <h4 class="job-skill">工作技能</h4>
-                            <p>► Illustrator</p>
-                            <p>► Photoshop</p>
-                            <p>► Keynote</p>
+                            <p>► Illustrator & Photoshop</p>
+                            <p>► Keynote </p>
                         </div>
                 </li>
                 <li class="work">
@@ -110,14 +108,12 @@
                     <div class="work-description">
                         <div class="job">
                             <h4 class="job-title">影音設計師</h4>
-                            <p>► 活動會前開場特效影片、週年回顧花絮</p>
-                            <p>► 數位課程影音後製、衛教動畫、訪談影片</p>
-                            <p>► Slide 資訊圖表美化、EDM 設計</p>
+                            <p>► 開場特效、週年回顧影片、訪談錄製</p>
+                            <p>► 數位課程後製、衛教動畫、Slide設計</p>
                         </div>
                         <div class="skills">
                             <h4 class="job-skill">工作技能</h4>
-                            <p>► Premiere</p>
-                            <p>► After Effects</p>
+                            <p>► Premiere & After Effects</p>
                             <p>► Lightroom</p>
                         </div>
                     </div>
@@ -130,14 +126,12 @@
                     <div class="work-description">
                         <div class="job">
                             <h4 class="job-title">網頁設計師</h4>
-                            <p>► Web 介面與視覺設計，改善使用者體驗</p>
-                            <p>► 網站內容維護、保留排版彈性</p>
-                            <p>► 前端網頁切版，與後端工程師銜接</p>
+                            <p>► 網站介面視覺、維護，設計流程規劃</p>
+                            <p>► 保留排版彈性、前端網頁切版</p>
                         </div>
                         <div class="skills">
                             <h4 class="job-skill">工作技能</h4>
-                            <p>► HTML / CSS</p>
-                            <p>► RWD</p>
+                            <p>► HTML & CSS & RWD</p>
                             <p>► Figma</p>
                         </div>
                     </div>
