--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
                 <p class="textNow">
                     我喜歡嘗試新事物、學習新的技術。<br>
                     目前正在學習網頁前端設計相關的工具與技能，<br>
-                    朝優秀的網頁設計師邁進！<br>
+                    朝優秀的多媒體設計師邁進！<br>
                 </p>
             </div>
         </div>
