--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
         </div>
         <div id="title1" class="about">
             <div class="bio">
-                <img class="headShot" src="images/YIN image.svg" alt="headShot">
+                <img class="headShot" src="images/YINimage.svg" alt="headShot">
                 <h4 class="bio-name">Chen Yin Yin</h4>
                 <div class="bio-content">
                     <ul>
@@ -156,7 +156,7 @@
                     <li>
                         <a href="https://www.figma.com/file/YMmeECJXYFLDGsK8lwnO50/Yin-s-Resume?node-id=0%3A1"
                             target="_blank" class="link">
-                            <img src="images/My Resume.svg" alt="resume-Img">
+                            <img src="images/MyResume.svg" alt="resume-Img">
                             <p>前往專案</p>
                         </a>
                         <div class="projects-name">
@@ -169,7 +169,7 @@
         </div>
         <div id="title4" class="contact">
             <h3>Thank you for sticking to the end.</h3>
-            <img class="emailIcon" src="images/icon/Email baggier.svg" alt="emailIcon">
+            <img class="emailIcon" src="images/icon/EmailBigger.svg" alt="emailIcon">
             <p>Shot me a mail at</p>
             <h4>yinyin0414@gmail.com</h4>
             <div class="copyright">
