--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
                 <li class="work">
                     <div class="company">
                         <img src="images/icon/web.svg" alt="web-icon">
-                        <p>補教業：實體補習班&線上學習</p>
+                        <p>補教業</p>
                     </div>
                     <div class="work-description">
                         <div class="job">
