--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
         </div>
         <div id="title1" class="about">
             <div class="bio">
-                <img class="headShot" src="images/YIN image.png" alt="headShot">
+                <img class="headShot" src="images/YIN image.svg" alt="headShot">
                 <h4 class="bio-name">Chen Yin Yin</h4>
                 <div class="bio-content">
                     <ul>
@@ -176,7 +176,7 @@
         </div>
         <div id="title4" class="contact">
             <h3>Thank you for sticking to the end.</h3>
-            <img class="emailIcon" src="images/icon/Email baggier.png" alt="emailIcon">
+            <img class="emailIcon" src="images/icon/Email baggier.svg" alt="emailIcon">
             <p>Shot me a mail at</p>
             <h4>yinyin0414@gmail.com</h4>
             <div class="copyright">
