--- a/index.html
+++ b/index.html
@@ -71,13 +71,15 @@
             <div class="aboutMe-content">
                 <h3>ABOUT ME</h3>
                 <p class="textPast">
-                    你好，我是陳音因，過去是一名影音設計師，<br>
-                    從事影片剪輯、2D動畫製作，以及資料視覺化等設計。<br>
+                    你好，我是陳音因，曾任影音設計師一職，<br>
+                    過去有業務、廣告幕後、影片剪輯、2D動畫製作、<br>
+                    簡報等資訊圖表設計、網頁首頁改版等經歷。<br>
                 </p>
                 <p class="textNow">
-                    我喜歡嘗試新事物、學習新的技術。<br>
-                    目前正在學習網頁前端設計相關的工具與技能，<br>
-                    朝優秀的網頁設計師邁進！<br>
+                    我喜歡與人溝通、樂於服務。<br>
+                    目前正在學習網頁前端與後端的知識。<br>
+                    自知還有許多不足，希望先從客服工程師磨練起。<br>
+                    自許未來朝PM性質的工作發展！<br>
                 </p>
             </div>
         </div>
