--- a/index.html
+++ b/index.html
@@ -178,7 +178,7 @@
         </div>
         <div id="title4" class="contact">
             <h3>Thank you for sticking to the end.</h3>
-            <img class="emailIcon" src="images/icon/Email baggier.svg" alt="emailIcon">
+            <img class="emailIcon" src="images/icon/EmailBigger.svg" alt="emailIcon">
             <p>Shot me a mail at</p>
             <h4>yinyin0414@gmail.com</h4>
             <div class="copyright">
