--- a/index.html
+++ b/index.html
@@ -78,8 +78,7 @@
                 <p class="textNow">
                     我喜歡與人溝通、樂於服務。<br>
                     目前正在學習網頁前端與後端的知識。<br>
-                    自知還有許多不足，希望先從客服工程師磨練起。<br>
-                    自許未來朝PM性質的工作發展！<br>
+                    期許自己能持續成長，精進自己的技能！<br>
                 </p>
             </div>
         </div>
