--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
                 <p class="textNow">
                     我喜歡與人溝通、樂於服務。<br>
                     目前正在學習網頁前端與後端的知識。<br>
-                    期許自己能持續成長，精進自己的技能！<br>
+                    精進自己的技能，並持續成長！<br>
                 </p>
             </div>
         </div>
