--- a/index.html
+++ b/index.html
@@ -162,14 +162,14 @@
                         </div>
                     </li>
                     <li>
-                        <a href="https://www.figma.com/file/YMmeECJXYFLDGsK8lwnO50/Yin-s-Resume?node-id=0%3A1"
+                        <a href="https://www.figma.com/proto/1oODezappo15d7F4YnVnnV/%E8%81%AF%E6%88%90%E5%A4%96%E8%AA%9E-Light?page-id=0%3A1&node-id=247%3A15490&viewport=-154%2C123%2C0.11507369577884674&scaling=contain"
                             target="_blank" class="link">
-                            <img src="images/MyResume.svg" alt="resume-Img">
+                            <img src="images/Lcc.svg" alt="lcc-Img">
                             <p>前往專案</p>
                         </a>
                         <div class="projects-name">
-                            <h5>個人履歷網站製作</h5>
-                            <p>本網站 (Figma / html+css)</p>
+                            <h5>聯成外語首頁改版</h5>
+                            <p>UI 設計 (Figma / Prototype)</p>
                         </div>
                     </li>
                 </ul>
