--- a/index.html
+++ b/index.html
@@ -151,7 +151,7 @@
                 <h3>PROJECTS</h3>
                 <ul class="webDesign">
                     <li>
-                        <a href="https://www.figma.com/file/ZRzAgHoGlcd1tA78dlsIJy/Cook-Course?node-id=0%3A1"
+                        <a href="https://www.figma.com/proto/ZRzAgHoGlcd1tA78dlsIJy/Pure-Bakery?page-id=0%3A1&node-id=1%3A2&viewport=288%2C305%2C0.04622244834899902&scaling=scale-down"
                             target="_blank" class="link">
                             <img src="images/UI首頁.svg" alt="UI-Img">
                             <p>前往專案</p>
