--- a/index.html
+++ b/index.html
@@ -93,8 +93,8 @@
                     <div class="work-description">
                         <div class="job">
                             <h4 class="job-title">製片助理</h4>
-                            <p>► Briefing meeting、現場拍攝支援</p>
-                            <p>► 申請公播權、購買線上影片、音效等素材</p>
+                            <p>► Brief meeting、現場拍攝支援</p>
+                            <p>► 申請公播權、購買線上影音等素材</p>
                             <p>► 場勘、場地租借、道具租借等</p>
                         </div>
                         <div class="skills">
@@ -112,8 +112,8 @@
                     <div class="work-description">
                         <div class="job">
                             <h4 class="job-title">影音設計師</h4>
-                            <p>► 活動會前開場特效影片、週年回顧花絮</p>
-                            <p>► 數位課程影音後製、衛教動畫、訪談影片</p>
+                            <p>► 活動開場特效影片、週年回顧花絮</p>
+                            <p>► 數位課程後製、衛教動畫、訪談影片</p>
                             <p>► Slide 資訊圖表美化、EDM 設計</p>
                         </div>
                         <div class="skills">
@@ -132,7 +132,7 @@
                     <div class="work-description">
                         <div class="job">
                             <h4 class="job-title">網頁設計師</h4>
-                            <p>► Web 介面與改版設計，改善使用者體驗</p>
+                            <p>► 網站改版設計、改善使用者體驗</p>
                             <p>► 網站內容維護、保留排版彈性</p>
                             <p>► 響應式設計，與前端工程師銜接</p>
                         </div>
