--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
                         <div class="job">
                             <h4 class="job-title">網頁設計師</h4>
                             <p>► 網站改版設計、改善使用者體驗</p>
-                            <p>► 網站內容維護、保留排版彈性</p>
+                            <p>► 網站後台經營、內容上架與維護</p>
                             <p>► 響應式設計，與前端工程師銜接</p>
                         </div>
                         <div class="skills">
