--- a/index.html
+++ b/index.html
@@ -157,7 +157,7 @@
                             <p>前往專案</p>
                         </a>
                         <div class="projects-name">
-                            <h5>烘焙坊網站視覺設計</h5>
+                            <h5>網站視覺設計：烘焙坊</h5>
                             <p>UI 個人練習作品 (Figma)</p>
                         </div>
                     </li>
@@ -168,7 +168,7 @@
                             <p>前往專案</p>
                         </a>
                         <div class="projects-name">
-                            <h5>聯成外語首頁改版</h5>
+                            <h5>首頁改版：聯成外語</h5>
                             <p>UI 設計 (Figma / Prototype)</p>
                         </div>
                     </li>
