--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
                         <div class="job">
                             <h4 class="job-title">影音設計師</h4>
                             <p>► 活動開場特效影片、週年回顧花絮</p>
-                            <p>► 數位課程後製、衛教動畫、訪談影片</p>
+                            <p>► 數位課程、訪談影片、衛教動畫</p>
                             <p>► Slide 資訊圖表美化、EDM 設計</p>
                         </div>
                         <div class="skills">
