--- a/index.html
+++ b/index.html
@@ -132,9 +132,9 @@
                     <div class="work-description">
                         <div class="job">
                             <h4 class="job-title">網頁設計師</h4>
-                            <p>► 網站改版設計、改善使用者體驗</p>
-                            <p>► 網站後台經營、內容上架與維護</p>
-                            <p>► 響應式設計，與前端工程師銜接</p>
+                            <p>► 網站首頁改版、改善使用者體驗</p>
+                            <p>► 網站後台經營、例行文章上架與維護</p>
+                            <p>► 響應式設計，與前端工程師協作</p>
                         </div>
                         <div class="skills">
                             <h4 class="job-skill">工作技能</h4>
