--- a/index.html
+++ b/index.html
@@ -94,8 +94,8 @@
                         <div class="job">
                             <h4 class="job-title">製片助理</h4>
                             <p>► Brief meeting、現場拍攝支援</p>
-                            <p>► 申請公播權、購買線上影音等素材</p>
-                            <p>► 場勘、場地租借、道具租借等</p>
+                            <p>► 申請公播權、線上影音等素材購買</p>
+                            <p>► 場勘取景、場地租借、道具租借等</p>
                         </div>
                         <div class="skills">
                             <h4 class="job-skill">工作技能</h4>
@@ -113,7 +113,7 @@
                         <div class="job">
                             <h4 class="job-title">影音設計師</h4>
                             <p>► 活動開場特效影片、週年回顧花絮</p>
-                            <p>► 數位課程、訪談影片、衛教動畫</p>
+                            <p>► 數位課程後製、訪談影片、衛教動畫</p>
                             <p>► Slide 資訊圖表美化、EDM 設計</p>
                         </div>
                         <div class="skills">
