--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
                             <h4 class="job-title">製片助理</h4>
                             <p>► Brief meeting、現場拍攝支援</p>
                             <p>► 申請公播權、線上影音等素材購買</p>
-                            <p>► 場勘取景、場地聯絡、器材道具租借等</p>
+                            <p>► 場地取景並聯絡、器材道具租借採買</p>
                         </div>
                         <div class="skills">
                             <h4 class="job-skill">工作技能</h4>
