--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
                         </li>
                         <li class="bio-columns">
                             <img class="icon-school" src="images/icon/school.svg" alt="icon-school">
-                            <p>台南應用科技大學 視覺傳達設計系</p>
+                            <p>台南應用科大 視覺傳達設計系</p>
                         </li>
                         <li class="bio-columns">
                             <img class="icon-email" src="images/icon/email.svg" alt="icon-email">
