--- a/index.html
+++ b/index.html
@@ -72,8 +72,8 @@
                 <h3>ABOUT ME</h3>
                 <p class="textPast">
                     你好，我是陳音因，曾任影音設計師一職，<br>
-                    過去有業務、廣告幕後、影片剪輯、2D動畫製作、<br>
-                    簡報等資訊圖表設計、網頁首頁改版等經歷。<br>
+                    過去有業務、廣告幕後、影片剪輯、2D動畫、<br>
+                    簡報等資訊圖表設計、網站首頁改版經歷。<br>
                 </p>
                 <p class="textNow">
                     我喜歡與人溝通、樂於服務。<br>
