--- a/index.html
+++ b/index.html
@@ -72,12 +72,11 @@
                 <h3>ABOUT ME</h3>
                 <p class="textPast">
                     你好，我是陳音因，曾任影音設計師一職，<br>
-                    過去有業務、廣告幕後、影片剪輯、2D動畫、<br>
+                    過去有廣告幕後、影片剪輯、2D動畫、<br>
                     簡報等資訊圖表設計、網站首頁改版經歷。<br>
                 </p>
                 <p class="textNow">
-                    我喜歡與人溝通、樂於服務。<br>
-                    目前正在學習網頁前端與後端的知識。<br>
+                    目前正在學習網路管理、資安等相關知識。<br>
                     精進自己的技能，並持續成長！<br>
                 </p>
             </div>
@@ -182,7 +181,7 @@
             <h4>yinyin0414@gmail.com</h4>
             <div class="copyright">
                 <p>Designed by YIN YIN</p>
-                <p>© 2021</p>
+                <p>© 2023</p>
             </div>
         </div>
     </div>
