--- a/index.html
+++ b/index.html
@@ -71,9 +71,10 @@
             <div class="aboutMe-content">
                 <h3>ABOUT ME</h3>
                 <p class="textPast">
-                    你好，我是陳音因，曾任影音設計師一職，<br>
-                    過去有廣告幕後、影片剪輯、2D動畫、<br>
-                    簡報等資訊圖表設計、網站首頁改版經歷。<br>
+                    你好，我是陳音因，<br>
+                    曾任影音設計師一職，<br>
+                    過去有廣告幕後、影音剪輯、<br>
+                    視覺設計、網站首頁改版經歷。<br>
                 </p>
                 <p class="textNow">
                     目前正在學習網路管理、資安等相關知識。<br>
@@ -145,20 +146,20 @@
                 </li>
             </ul>
         </div>
-        <div id="title3" class="projects">
-            <div class="projects-content">
-                <h3>PROJECTS</h3>
-                <ul class="webDesign">
+        <div id="title3" class="Certifications">
+            <div class="Certifications-content">
+                <h3>Certifications</h3>
+                <div data-iframe-width="150" data-iframe-height="270"
+                    data-share-badge-id="d1d1daaa-4d36-40b2-8a19-a55c2dd2c77c"
+                    data-share-badge-host="https://www.credly.com"></div>
+                <script type="text/javascript" async src="//cdn.credly.com/assets/utilities/embed.js"></script>
+                <ul class="MyCertifications">
                     <li>
-                        <a href="https://www.figma.com/proto/ZRzAgHoGlcd1tA78dlsIJy/Pure-Bakery?page-id=0%3A1&node-id=1%3A2&viewport=288%2C305%2C0.04622244834899902&scaling=scale-down"
+                        <a href="https://www.credly.com/badges/d1d1daaa-4d36-40b2-8a19-a55c2dd2c77c/public_url"
                             target="_blank" class="link">
                             <img src="images/UI首頁.svg" alt="UI-Img">
-                            <p>前往專案</p>
+                            <p>CCNA</p>
                         </a>
-                        <div class="projects-name">
-                            <h5>網站視覺設計：烘焙坊</h5>
-                            <p>UI 個人練習作品 (Figma)</p>
-                        </div>
                     </li>
                     <li>
                         <a href="https://www.figma.com/proto/1oODezappo15d7F4YnVnnV/%E8%81%AF%E6%88%90%E5%A4%96%E8%AA%9E-Light?page-id=0%3A1&node-id=247%3A15490&viewport=-154%2C123%2C0.11507369577884674&scaling=contain"
