--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
             <ul class="menu">
                 <li><label for="menu-control"><a href="#title1">About</a></label></li>
                 <li><a href="#title2">Experience</a></li>
-                <li><a href="#title3">Project</a></li>
+                <li><a href="#title3">Certifications</a></li>
                 <li><a href="#title4">Contact</a></li>
             </ul>
         </div>
