--- a/index.html
+++ b/index.html
@@ -150,14 +150,14 @@
                 <li>
                     <a href="https://www.credly.com/badges/d1d1daaa-4d36-40b2-8a19-a55c2dd2c77c/public_url"
                         target="_blank" class="link">
-                        <img src="images/Certifications-CCNA.png" alt="CCNA-Img">
+                        <img src="images/Certifications-CCNA.svg" alt="CCNA-Img">
                         <p>CCNA</p>
                     </a>
                 </li>
                 <li>
                     <a href="https://www.credly.com/badges/bc36a938-19ff-464d-b838-783890d4dbfb/public_url"
                         target="_blank" class="link">
-                        <img src="images/Certifications-RHCSA.png" alt="RHCSA-Img">
+                        <img src="images/Certifications-RHCSA.svg" alt="RHCSA-Img">
                         <p>RHCSA</p>
                     </a>
                 </li>
