--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
             <ul class="menu">
                 <li><label for="menu-control"><a href="#title1">About</a></label></li>
                 <li><a href="#title2">Experience</a></li>
-                <li><a href="#title3">Certifications</a></li>
+                <li><a href="#title3">Project</a></li>
                 <li><a href="#title4">Contact</a></li>
             </ul>
         </div>
@@ -72,10 +72,12 @@
                 <h3>ABOUT ME</h3>
                 <p class="textPast">
                     你好，我是陳音因，曾任影音設計師一職，<br>
-                    過去有廣告幕後、視覺設計等經歷。<br>
+                    過去有業務、廣告幕後、影片剪輯、2D動畫、<br>
+                    簡報等資訊圖表設計、網站首頁改版經歷。<br>
                 </p>
                 <p class="textNow">
-                    目前正在學習網路管理、資安等相關知識。<br>
+                    我喜歡與人溝通、樂於服務。<br>
+                    目前正在學習網頁前端與後端的知識。<br>
                     精進自己的技能，並持續成長！<br>
                 </p>
             </div>
@@ -144,35 +146,45 @@
                 </li>
             </ul>
         </div>
-        <div id="title2" class="experience">
-            <h3>Certifications</h3>
-            <ul class="experience-content">
-                <li class="work">
-                    <a href="https://www.credly.com/badges/d1d1daaa-4d36-40b2-8a19-a55c2dd2c77c/public_url"
-                        target="_blank" class="link">
-                        <img src="images/Certifications/Certifications-CCNA.svg" alt="CCNA-Img">
-                        <p>CCNA</p>
-                    </a>
-                </li>
-                <a href="https://www.credly.com/badges/bc36a938-19ff-464d-b838-783890d4dbfb/public_url" target="_blank"
-                    class="link">
-                    <img src="images/Certifications/Certifications-RHCSA.svg" alt="RHCSA-Img">
-                    <p>RHCSA</p>
-                </a>
-                </li>
-            </ul>
+        <div id="title3" class="projects">
+            <div class="projects-content">
+                <h3>PROJECTS</h3>
+                <ul class="webDesign">
+                    <li>
+                        <a href="https://www.figma.com/proto/ZRzAgHoGlcd1tA78dlsIJy/Pure-Bakery?page-id=0%3A1&node-id=1%3A2&viewport=288%2C305%2C0.04622244834899902&scaling=scale-down"
+                            target="_blank" class="link">
+                            <img src="images/UI首頁.svg" alt="UI-Img">
+                            <p>前往專案</p>
+                        </a>
+                        <div class="projects-name">
+                            <h5>網站視覺設計：烘焙坊</h5>
+                            <p>UI 個人練習作品 (Figma)</p>
+                        </div>
+                    </li>
+                    <li>
+                        <a href="https://www.figma.com/proto/1oODezappo15d7F4YnVnnV/%E8%81%AF%E6%88%90%E5%A4%96%E8%AA%9E-Light?page-id=0%3A1&node-id=247%3A15490&viewport=-154%2C123%2C0.11507369577884674&scaling=contain"
+                            target="_blank" class="link">
+                            <img src="images/Lcc.svg" alt="lcc-Img">
+                            <p>前往專案</p>
+                        </a>
+                        <div class="projects-name">
+                            <h5>首頁改版：聯成外語</h5>
+                            <p>UI 設計 (Figma / Prototype)</p>
+                        </div>
+                    </li>
+                </ul>
+            </div>
         </div>
-    </div>
-    <div id="title4" class="contact">
-        <h3>Thank you for sticking to the end.</h3>
-        <img class="emailIcon" src="images/icon/EmailBigger.svg" alt="emailIcon">
-        <p>Shot me a mail at</p>
-        <h4>yinyin0414@gmail.com</h4>
-        <div class="copyright">
-            <p>Designed by YIN YIN</p>
-            <p>© 2023</p>
+        <div id="title4" class="contact">
+            <h3>Thank you for sticking to the end.</h3>
+            <img class="emailIcon" src="images/icon/EmailBigger.svg" alt="emailIcon">
+            <p>Shot me a mail at</p>
+            <h4>yinyin0414@gmail.com</h4>
+            <div class="copyright">
+                <p>Designed by YIN YIN</p>
+                <p>© 2021</p>
+            </div>
         </div>
-    </div>
     </div>
 
 </body>
