--- a/index.html
+++ b/index.html
@@ -145,34 +145,34 @@
             </ul>
         </div>
         <div id="title3" class="Certifications">
-            <h3>CERTIFICATIONS</h3>
-            <ul class="Certifications-content">
-                <li class="work">
+            <div class="Certifications-content">
+                <h3>CERTIFICATIONS</h3>
+                <ul class="MyCertifications">
                     <a href="https://www.credly.com/badges/d1d1daaa-4d36-40b2-8a19-a55c2dd2c77c/public_url"
                         target="_blank" class="link">
                         <img src="images/Certifications/Certifications-CCNA.svg" alt="CCNA-Img">
                         <p>CCNA</p>
                     </a>
-                </li>
-                <a href="https://www.credly.com/badges/bc36a938-19ff-464d-b838-783890d4dbfb/public_url" target="_blank"
-                    class="link">
-                    <img src="images/Certifications/Certifications-RHCSA.svg" alt="RHCSA-Img">
-                    <p>RHCSA</p>
-                </a>
-                </li>
-            </ul>
+                    </li>
+                    <a href="https://www.credly.com/badges/bc36a938-19ff-464d-b838-783890d4dbfb/public_url"
+                        target="_blank" class="link">
+                        <img src="images/Certifications/Certifications-RHCSA.svg" alt="RHCSA-Img">
+                        <p>RHCSA</p>
+                    </a>
+                    </li>
+                </ul>
+            </div>
         </div>
-    </div>
-    <div id="title4" class="contact">
-        <h3>Thank you for sticking to the end.</h3>
-        <img class="emailIcon" src="images/icon/EmailBigger.svg" alt="emailIcon">
-        <p>Shot me a mail at</p>
-        <h4>yinyin0414@gmail.com</h4>
-        <div class="copyright">
-            <p>Designed by YIN YIN</p>
-            <p>© 2023</p>
+        <div id="title4" class="contact">
+            <h3>Thank you for sticking to the end.</h3>
+            <img class="emailIcon" src="images/icon/EmailBigger.svg" alt="emailIcon">
+            <p>Shot me a mail at</p>
+            <h4>yinyin0414@gmail.com</h4>
+            <div class="copyright">
+                <p>Designed by YIN YIN</p>
+                <p>© 2023</p>
+            </div>
         </div>
-    </div>
     </div>
 
 </body>
