--- a/index.html
+++ b/index.html
@@ -144,23 +144,25 @@
                 </li>
             </ul>
         </div>
-        <div id="title3" class="Certifications">
-            <div class="Certifications-content">
+        <div id="title3" class="projects">
+            <div class="projects-content">
                 <h3>CERTIFICATIONS</h3>
-                <ul class="MyCertifications">
+                <ul class="webDesign">
                     <li>
                         <a href="https://www.credly.com/badges/d1d1daaa-4d36-40b2-8a19-a55c2dd2c77c/public_url"
                             target="_blank" class="link">
                             <img src="images/Certifications/Certifications-CCNA.svg" alt="CCNA-Img">
                             <p>CCNA</p>
                         </a>
-                    </li>
                     <li>
                         <a href="https://www.credly.com/badges/bc36a938-19ff-464d-b838-783890d4dbfb/public_url"
                             target="_blank" class="link">
                             <img src="images/Certifications/Certifications-RHCSA.svg" alt="RHCSA-Img">
                             <p>RHCSA</p>
                         </a>
+                        <div class="projects-name">
+                            <p>持續新增中......</p>
+                        </div>
                     </li>
                 </ul>
             </div>
