--- a/index.html
+++ b/index.html
@@ -75,8 +75,8 @@
                     過去有廣告幕後、視覺設計等經歷。<br>
                 </p>
                 <p class="textNow">
-                    目前正在學習網路管理、資安等相關知識。<br>
-                    精進自己的技能，並持續成長！<br>
+                    因學習網路管理相關課程，亦考取到相關證照。<br>
+                    持續培養並開發自己各種技能，進步成長！<br>
                 </p>
             </div>
         </div>
