--- a/index.html
+++ b/index.html
@@ -125,20 +125,20 @@
                 <li class="work">
                     <div class="company">
                         <img src="images/icon/web.svg" alt="web-icon">
-                        <p>補教業</p>
+                        <p>電腦系統整合服務業</p>
                     </div>
                     <div class="work-description">
                         <div class="job">
-                            <h4 class="job-title">網頁設計師</h4>
-                            <p>► 網站首頁改版、改善使用者體驗</p>
-                            <p>► 網站後台經營、例行文章上架與維護</p>
-                            <p>► 響應式設計，與前端工程師協作</p>
+                            <h4 class="job-title">助理工程師</h4>
+                            <p>► imperva 資安產品安裝設定</p>
+                            <p>► 例行維護、升級、相關驗測</p>
+                            <p>► 說明文件、簡報協作</p>
                         </div>
                         <div class="skills">
                             <h4 class="job-skill">工作技能</h4>
+                            <p>► RHEL / Windows</p>
+                            <p>► imperva DAM</p>
                             <p>► HTML / CSS</p>
-                            <p>► RWD</p>
-                            <p>► Figma</p>
                         </div>
                     </div>
                 </li>
