--- a/index.html
+++ b/index.html
@@ -130,9 +130,9 @@
                     <div class="work-description">
                         <div class="job">
                             <h4 class="job-title">助理工程師</h4>
-                            <p>► imperva 資安產品安裝設定</p>
-                            <p>► 例行維護、升級、相關驗測</p>
-                            <p>► 說明文件、簡報協作</p>
+                            <p>► imperva DAM 安裝設定、例行維護</p>
+                            <p>► 作業系統、資料庫安裝、資安稽核產品驗測</p>
+                            <p>► 文件說明與簡報製作</p>
                         </div>
                         <div class="skills">
                             <h4 class="job-skill">工作技能</h4>
