--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
                         <div class="job">
                             <h4 class="job-title">助理工程師</h4>
                             <p>► imperva DAM 安裝設定、例行維護</p>
-                            <p>► 作業系統、資料庫安裝、資安稽核產品驗測</p>
+                            <p>► 作業系統、資料庫安裝、資安產品驗測</p>
                             <p>► 文件說明與簡報製作</p>
                         </div>
                         <div class="skills">
