--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
                     過去有廣告幕後、視覺設計等經歷。<br>
                 </p>
                 <p class="textNow">
-                    因學習網路管理相關課程，亦考取到相關證照。<br>
+                    因學習網路相關課程，目前考取到相關基礎證照。<br>
                     持續培養並開發自己各種技能，進步成長！<br>
                 </p>
             </div>
