--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
                     <ul>
                         <li class="bio-columns">
                             <img class="icon-map" src="images/icon/map.svg" alt="icon-map">
-                            <p>Taipei</p>
+                            <p>Northern Taiwan</p>
                         </li>
                         <li class="bio-columns">
                             <img class="icon-school" src="images/icon/school.svg" alt="icon-school">
