--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@
                             <h4 class="job-title">助理工程師</h4>
                             <p>► imperva DAM 安裝設定、例行維護</p>
                             <p>► OS、資料庫安裝、資安產品驗測</p>
-                            <p>► 文件說明與簡報製作</p>
+                            <p>► 說明文件與簡報製作、教學影片錄製</p>
                         </div>
                         <div class="skills">
                             <h4 class="job-skill">工作技能</h4>
